# homtwork_4

./: .env_example  .gitignore  README.md  index.html  products.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_category_photo.py
catalog/template/: categories.html
catalog/templates/: base.html  catalogs.html  categories.html  category_1.html  category_2.html  category_3.html  category_4.html  category_deteil.html  category_list.html  category_product_list.html  contacts.html  index.html  product_detail.html  product_deteil.html  product_list.html
catalog/templates/includes/: inc_menu.html  inc_structured.html
catalog/templates/templatetags/: custom_filters.py  my_tags.py
config/: settings.py  urls.py
css/: style.css
src/: app.py
static/css/: style.css
templates/: category_1.html  category_2.html  category_3.html  category_4.html  contacts.html
