[tool.poetry]
name = "homtwork-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
black = "^24.10.0"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
humanize = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
